--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,87 @@
 remote_theme: just-the-docs/just-the-docs
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Zeitgeist
+description: A Pokemon Mystery Dungeon Database
+baseurl: "/Zeitgeist" # the subpath of your site, e.g. /blog
+url: "https://ZeitgeistPMD.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+# Set a path/url to a logo that will be displayed instead of the title
+logo: "/logo.png"
+
+# Enable or disable the site search
+# Supports true (default) or false
+search_enabled: true
+search:
+  # Split pages into sections that can be searched individually
+  # Supports 1 - 6, default: 2
+  heading_level: 6
+  # Maximum amount of previews per search result
+  # Default: 3
+  previews: 16
+  # Maximum amount of words to display before a matched word in the preview
+  # Default: 5
+  preview_words_before: 8
+  # Maximum amount of words to display after a matched word in the preview
+  # Default: 10
+  preview_words_after: 8
+  # Set the search token separator
+  # Default: /[\s\-/]+/
+  # Example: enable support for hyphenated search words
+  tokenizer_separator: /[\s\-/]+/
+  # Display the relative url in search results
+  # Supports true (default) or false
+  rel_url: true
+  # Enable or disable the search button that appears in the bottom right corner of every page
+  # Supports true or false (default)
+  button: true
+
+mermaid:
+# Version of mermaid library
+# Pick an available version from https://cdn.jsdelivr.net/npm/mermaid/
+version: "9.1.5"
+# Put any additional configuration, such as setting the theme, in _includes/mermaid_config.js
+# See also docs/ui-components/code
+
+# Enable or disable heading anchors
+heading_anchors: true
+
+# Sort order for navigation links
+# nav_sort: case_insensitive # default, equivalent to nil
+nav_sort: case_sensitive # Capital letters sorted before lowercase
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top!"
+
+footer_content: "Hi, i'm a footer. Please check _config.yml"
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "View this site on Github"
+gh_edit_repository: "https://github.com/FlarosOverfield/Zeitgeist" # the github URL for your repo
+gh_edit_branch: "trainer" # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+
+# Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
+color_scheme: dark
+
+plugins:
+  - jekyll-seo-tag
+
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  startings: []
+  blanklines: false
+  profile: false
