--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ remote_theme: just-the-docs/just-the-docs
 # in the templates via {{ site.myvariable }}.
 title: Pokémon Mystery Dungeon Nexus
 description: A Pokémon Mystery Dungeon Database Index
-baseurl: "/PMDNexus" # the subpath of your site, e.g. /blog
+baseurl: "/Pokemon-Mystery-Dungeon-Nexus" # the subpath of your site, e.g. /blog
 url: "https://PMDNexus.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Set a path/url to a logo that will be displayed instead of the title
